--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_CLIENT_ID=4942e0f05c860cb961ea
+REACT_APP_CLIENT_SECRET=CLIENT_SECRET_CODE
 REACT_APP_REDIRECT_URI=http://localhost:3000/login
